# Compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  output.c
include/: codegen.h  lexer.h  parser.h  runner.h  semantic.h
src/: codegen.c  lexer.c  main.c  parser.c  runner.c  semantic.c
test/: test_source.txt
